force-app/main/default/objects/Contact_Sector__c/Contact_Sector__c.object-meta.xml
<CustomObject>
    <label>Contact Sector</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Contact Sector</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Sectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>