force-app/main/default/objects/Contact_Sector__c/fields/Coverage_Sector_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Sector_Dependency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coverage Sector Dependency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Coverage_Sector_Dependency__c.SecondarySector__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Coverage_Sector_Dependency__c</referenceTo>
    <relationshipLabel>Contact Sectors</relationshipLabel>
    <relationshipName>Contact_Sectors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>