force-app/main/default/objects/Contact_Sector__c/fields/Primary_Sector__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sector__c</fullName>
    <formula>Coverage_Sector_Dependency__r.PrimarySector__r.Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sector</label>
    <type>Text</type>
</CustomField>