force-app/main/default/objects/Contact_Sector__c/fields/Tertiary_Sector__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Sector__c</fullName>
    <formula>Coverage_Sector_Dependency__r.TertiarySector__r.Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tertiary Sector</label>
    <type>Text</type>
</CustomField>