force-app/main/default/objects/Contact_Sector__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Coverage_Sector_Dependency__r.CoverageType__r.Value__c</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>